adicionado tipos na documentaçao.
